<resources>
    <string name="app_name">DO-THINGS</string>
    <string name="Comenzar">Let\'s start</string>
    <string name="icono">icon</string>
    <string name="do_things" translatable="false">DO THINGS</string>
    <string name="settings">Settings</string>
    <string name="team">Team</string>
    <string name="schedule">Schedule</string>
    <string name="myday">My Day</string>
    <string name="task">Task</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="nameTask">Name Task</string>
    <string name="descriptionTask">Description Task</string>
    <string name="fab_content_desc" translatable="false">fab_content</string>
    <string name="addtask">Add Task</string>
    <string name="add_note">Add Notes</string>
    <string name="change_ToTasksLis">Move to tasks list</string>
    <string name="change_ToMyDayList">Move to my day list</string>
    <string name="addTag"> Add Tags</string>
    <string name="reminder">Add reminder</string>
    <string name="addDate">Add Date</string>
    <string name="repeat">Repeat</string>
    <string name="attach">Attach file</string>
    <string name="ButtonSve">Save</string>
    <string name="deleteButton">deleteButton</string>
    <string name="Schedule">Schedule tasks</string>
    <string name="Settings">Settings</string>
    <string name="manage">Manage account</string>
    <string name="Synchronize">Synchronize account</string>
    <string name="notifications">Notifications</string>
    <string name="Help">Help</string>
    <string name="Your_profile">Your Profile</string>
    <string name="Name">Name</string>
    <string name="Lastname">Last name</string>
    <string name="UserName">Username</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Scheduled_tasks">Scheduled tasks</string>
    <string name="Logout">Logout</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="experience">Tarea Completada, experiencia +2</string>


</resources>